--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "exa-mcp-server": "^3.1.3"
+    "cors": "^2.8.5",
+    "exa-mcp-server": "^3.1.3",
+    "exa-websets-mcp-server": "^1.1.0",
+    "express": "^5.2.1",
+    "http-proxy-middleware": "^3.0.5",
+    "mcp-proxy": "^6.2.0"
   }
 }
